--- a/src/Librarian/admin.fxml
+++ b/src/Librarian/admin.fxml
@@ -206,15 +206,16 @@
                                  </font>
                               </JFXTextField>
                               <Label fx:id="lbl1" layoutX="41.0" layoutY="120.0" text="Label" />
-                              <Label fx:id="lbl2" layoutX="41.0" layoutY="152.0" text="Label" />
+                              <Label fx:id="lbl2" layoutX="41.0" layoutY="153.0" text="Label" />
                               <Label fx:id="lbl3" layoutX="41.0" layoutY="179.0" text="Label" />
                               <Label fx:id="lbl4" layoutX="41.0" layoutY="205.0" text="Label" />
                               <Label fx:id="lbl5" layoutX="41.0" layoutY="232.0" text="Label" />
-                              <Label layoutX="41.0" layoutY="259.0" text="Label" />
-                              <Label layoutX="41.0" layoutY="286.0" text="Label" />
-                              <Label layoutX="41.0" layoutY="310.0" text="Label" />
-                              <Label layoutX="41.0" layoutY="335.0" text="Label" />
-                              <Label layoutX="41.0" layoutY="367.0" text="Label" />
+                              <Label fx:id="lbl6" layoutX="41.0" layoutY="259.0" text="Label" />
+                              <Label fx:id="lbl7" layoutX="41.0" layoutY="286.0" text="Label" />
+                              <Label fx:id="lbl8" layoutX="41.0" layoutY="310.0" text="Label" />
+                              <Label fx:id="lbl9" layoutX="41.0" layoutY="335.0" text="Label" />
+                              <Label fx:id="lbl10" layoutX="41.0" layoutY="367.0" text="Label" />
+                              <Button layoutX="445.0" layoutY="201.0" mnemonicParsing="false" onAction="#returnbook" text="Return" />
                            </children></AnchorPane>
                   </content>
                 </Tab>
