--- a/src/Librarian/members.fxml
+++ b/src/Librarian/members.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
@@ -8,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="543.0" prefWidth="528.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Librarian.MembersController">
+<AnchorPane id="AnchorPane" prefHeight="543.0" prefWidth="528.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Librarian.MembersController">
     
    <children>
       <VBox layoutX="25.0" prefHeight="525.0" prefWidth="568.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -77,6 +82,7 @@
                   <Font size="14.0" />
                </font>
             </JFXTextField>
+            <JFXTextField fx:id="id" />
             <HBox prefHeight="85.0" prefWidth="495.0">
                <children>
                   <JFXButton fx:id="save" onAction="#handleSaveBtnAction" prefHeight="127.0" prefWidth="287.0" style="-fx-background-color: cyan;" text="Save">
